Connection with the administrationsystem

--- a/RekeningrijdersApplicatie/src/assets/i18n/en.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/en.json
@@ -19,9 +19,11 @@
     "type": "Type",
     "manage": "Manage",
     "remove": "Remove",
-    "car": "Car",
+    "unknown": "Unknown",
+    "passengercar": "Passenger Car",
+    "van": "Van",
+    "autobus": "Autobus",
     "truck": "Truck",
-    "motorcycle": "Motorcycle",
     "invoice": "Invoice",
     "movements": "Movements",
     "datestart": "Start Date",
