--- a/RekeningrijdersApplicatie/src/assets/i18n/nl.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/nl.json
@@ -19,9 +19,11 @@
     "type": "Type",
     "manage": "Beheer",
     "remove": "Verwijder",
-    "car": "Auto",
+    "unknown": "Onbekend",
+    "passengercar": "Passagiers Voertuig",
+    "van": "Bus",
+    "autobus": "Autobus",
     "truck": "Vrachtwagen",
-    "motorcycle": "Motorfiets",
     "invoice": "Factuur",
     "movements": "Verplaatsingen",
     "datestart": "Start Datum",
