--- a/RekeningrijdersApplicatie/src/assets/i18n/pl.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/pl.json
@@ -19,9 +19,11 @@
     "type": "Typ",
     "manage": "Zarządzanie",
     "remove": "Usunąć",
-    "car": "Samochód",
-    "truck": "Ciężarówka",
-    "motorcycle": "Motocykl",
+    "unknown": "Unknown",
+    "passengercar": "Passenger Car",
+    "van": "Van",
+    "autobus": "Autobus",
+    "truck": "Truck",
     "invoice": "Faktura",
     "movements": "Przemieszczenia",
     "datestart": "Data Rozpoczęcia",
