Te veel om op te noemen

--- a/RekeningrijdersApplicatie/src/assets/i18n/nl.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/nl.json
@@ -1,35 +1,52 @@
 {
+    "accountexists": "This username is already taken",
+    "address": "Adres",
+    "autobus": "Autobus",
+    "cancel": "Annuleren",
+    "date": "Datum",
+    "dateend": "Eind Datum",
+    "datestart": "Start Datum",
+    "edit": "Bewerken",
+    "email": "Email",
+    "emailinvalid": "Gebruik een geldig email",
+    "error": "Something went wrong, check your internet connection.",
+    "fieldrequired": "Dit veld is verplicht",
+    "invoice": "Factuur",
     "invoicedriver": "RekeningRijder",
+    "licenseplate": "Kenteken",
+    "locationend": "Eind Locatie",
+    "locationstart": "Start Locatie",
     "login": "Inloggen",
     "logout": "Uitloggen",
-    "register": "Registreren",
+    "manage": "Beheer",
+    "movements": "Verplaatsingen",
     "mydata": "Mijn Gegevens",
     "myinvoices": "Mijn Facturen",
     "myvehicles": "Mijn Voertuigen",
-    "username": "Gebruikersnaam",
-    "password": "Wachtwoord",
-    "email": "Email",
-    "address": "Adres",
-    "date": "Datum",
-    "totalsum": "Totaal Bedrag",
-    "paid": "Betaald",
-    "yes": "Ja",
+    "newpassword": "Nieuw Wachtwoord",
     "no": "Nee",
-    "licenseplate": "Kenteken",
-    "type": "Type",
-    "manage": "Beheer",
-    "remove": "Verwijder",
-    "unknown": "Onbekend",
+    "oldpassword": "Oud Wachtwoord",
+    "oldpasswordnomatch": "Password is incorrect",
+    "open": "Open",
+    "paid": "Betaald",
     "passengercar": "Passagiers Voertuig",
-    "van": "Bus",
-    "autobus": "Autobus",
+    "password": "Wachtwoord",
+    "passwordfieldsrequired": "All fields are required when changing password",
+    "passwordnomatch": "Wachtwoorden komen niet overeen",
+    "passwordsbedifferent": "New password must be different from existing password",
+    "pay": "Betaal",
+    "register": "Registreren",
+    "remove": "Verwijder",
+    "repeatpassword": "Herhaal Wachtwoord",
+    "save": "Opslaan",
+    "status": "Status",
+    "totalsum": "Totaal Bedrag",
     "truck": "Vrachtwagen",
-    "invoice": "Factuur",
-    "movements": "Verplaatsingen",
-    "datestart": "Start Datum",
-    "dateend": "Eind Datum",
-    "locationstart": "Start Locatie",
-    "locationend": "Eend Locatie",
+    "type": "Type",
+    "unknown": "Onbekend",
+    "username": "Gebruikersnaam",
+    "usernamepasswordnomatch": "Username and password don't match",
+    "van": "Bus",
     "vehicle": "Voertuig",
-    "pay": "Betaal"
+    "yes": "Ja"
 }
