--- a/RekeningrijdersApplicatie/src/assets/i18n/pl.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/pl.json
@@ -1,35 +1,52 @@
 {
+    "accountexists": "This username is already taken",
+    "address": "Adres",
+    "autobus": "Omnibus",
+    "cancel": "Anuluj",
+    "date": "Data",
+    "dateend": "Data Końcowa",
+    "datestart": "Data Rozpoczęcia",
+    "edit": "Edytować",
+    "email": "Email",
+    "emailinvalid": "Użyj poprawnego e-maila",
+    "error": "Something went wrong, check your internet connection.",
+    "fieldrequired": "To pole jest wymagane",
+    "invoice": "Faktura",
     "invoicedriver": "SterownikFaktury",
+    "licenseplate": "Tablica Rejestracyjna",
+    "locationend": "Koniec Lokalizacji",
+    "locationstart": "Rozpocznij Lokalizację",
     "login": "Logowanie",
     "logout": "Wylogowanie",
-    "register": "Zarejestrować",
+    "manage": "Zarządzanie",
+    "movements": "Przemieszczenia",
     "mydata": "Moje Dane",
     "myinvoices": "Moje Faktury",
     "myvehicles": "Moje Pojazdy",
-    "username": "Nazwa Użytkownika",
-    "password": "Hasło",
-    "email": "Email",
-    "address": "Adres",
-    "date": "Data",
-    "totalsum": "Suma",
-    "paid": "Płatny",
-    "yes": "Tak",
+    "newpassword": "Nowe Hasło",
     "no": "Nie",
-    "licenseplate": "Tablica Rejestracyjna",
-    "type": "Typ",
-    "manage": "Zarządzanie",
+    "oldpassword": "Stare Hasło",
+    "oldpasswordnomatch": "Password is incorrect",
+    "open": "Otwarty",
+    "paid": "Płatny",
+    "passengercar": "Samochód Osobowy",
+    "password": "Hasło",
+    "passwordfieldsrequired": "All fields are required when changing password",
+    "passwordnomatch": "Hasła nie pasują",
+    "passwordsbedifferent": "New password must be different from existing password",
+    "pay": "Zapłacić",
+    "register": "Zarejestrować",
     "remove": "Usunąć",
-    "unknown": "Unknown",
-    "passengercar": "Passenger Car",
-    "van": "Van",
-    "autobus": "Autobus",
-    "truck": "Truck",
-    "invoice": "Faktura",
-    "movements": "Przemieszczenia",
-    "datestart": "Data Rozpoczęcia",
-    "dateend": "Data Końcowa",
-    "locationstart": "Rozpocznij Lokalizację",
-    "locationend": "Koniec Lokalizacji",
+    "repeatpassword": "Powtórz Hasło",
+    "save": "Zapisać",
+    "status": "Status",
+    "totalsum": "Suma",
+    "truck": "Ciężarówka",
+    "type": "Typ",
+    "unknown": "Nieznany",
+    "username": "Nazwa Użytkownika",
+    "usernamepasswordnomatch": "Username and password don't match",
+    "van": "Awangarda",
     "vehicle": "Pojazd",
-    "pay": "Zapłacić"
+    "yes": "Tak"
 }
