--- a/RekeningrijdersApplicatie/src/assets/i18n/en.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/en.json
@@ -1,35 +1,52 @@
 {
+    "accountexists": "This username is already taken",
+    "address": "Address",
+    "autobus": "Autobus",
+    "cancel": "Cancel",
+    "date": "Date",
+    "dateend": "End Date",
+    "datestart": "Start Date",
+    "edit": "Edit",
+    "email": "Email",
+    "emailinvalid": "Use a valid email",
+    "error": "Something went wrong, check your internet connection.",
+    "fieldrequired": "This field is required",
+    "invoice": "Invoice",
     "invoicedriver": "InvoiceDriver",
+    "licenseplate": "License Plate",
+    "locationend": "End Location",
+    "locationstart": "Start Location",
     "login": "Login",
     "logout": "Logout",
-    "register": "Register",
+    "manage": "Manage",
+    "movements": "Movements",
     "mydata": "My Data",
     "myinvoices": "My Invoices",
     "myvehicles": "My Vehicles",
-    "username": "Username",
-    "password": "Password",
-    "email": "Email",
-    "address": "Address",
-    "date": "Date",
-    "totalsum": "Total Sum",
-    "paid": "Paid",
-    "yes": "Yes",
+    "newpassword": "New Password",
     "no": "No",
-    "licenseplate": "License Plate",
-    "type": "Type",
-    "manage": "Manage",
-    "remove": "Remove",
-    "unknown": "Unknown",
+    "oldpassword": "Old Password",
+    "oldpasswordnomatch": "Password is incorrect",
+    "open": "Open",
+    "paid": "Paid",
     "passengercar": "Passenger Car",
-    "van": "Van",
-    "autobus": "Autobus",
+    "password": "Password",
+    "passwordfieldsrequired": "All fields are required when changing password",
+    "passwordnomatch": "Passwords don't match",
+    "passwordsbedifferent": "New password must be different from existing password",
+    "pay": "Pay",
+    "register": "Register",
+    "remove": "Remove",
+    "repeatpassword": "Repeat Password",
+    "save": "Save",
+    "status": "Status",
+    "totalsum": "Total Sum",
     "truck": "Truck",
-    "invoice": "Invoice",
-    "movements": "Movements",
-    "datestart": "Start Date",
-    "dateend": "End Date",
-    "locationstart": "Start Location",
-    "locationend": "End Location",
+    "type": "Type",
+    "unknown": "Unknown",
+    "username": "Username",
+    "usernamepasswordnomatch": "Username and password don't match",
+    "van": "Van",
     "vehicle": "Vehicle",
-    "pay": "Pay"
+    "yes": "Yes"
 }
