--- a/PolitieApplicatie/src/assets/i18n/en.json
+++ b/PolitieApplicatie/src/assets/i18n/en.json
@@ -12,7 +12,7 @@
     "error": "Something went wrong, check your internet connection.",
     "fieldrequired": "This field is required",
     "invoice": "Invoice",
-    "invoicedriver": "InvoiceDriver",
+    "policesystem": "Police System",
     "licenseplate": "License Plate",
     "locationend": "End Location",
     "locationstart": "Start Location",
