--- a/PolitieApplicatie/src/assets/i18n/nl.json
+++ b/PolitieApplicatie/src/assets/i18n/nl.json
@@ -12,7 +12,7 @@
     "error": "Something went wrong, check your internet connection.",
     "fieldrequired": "Dit veld is verplicht",
     "invoice": "Factuur",
-    "invoicedriver": "RekeningRijder",
+    "policesystem": "Politie Systeem",
     "licenseplate": "Kenteken",
     "locationend": "Eind Locatie",
     "locationstart": "Start Locatie",
