--- a/PolitieApplicatie/src/assets/i18n/pl.json
+++ b/PolitieApplicatie/src/assets/i18n/pl.json
@@ -12,7 +12,7 @@
     "error": "Something went wrong, check your internet connection.",
     "fieldrequired": "To pole jest wymagane",
     "invoice": "Faktura",
-    "invoicedriver": "SterownikFaktury",
+    "policesystem": "System Policyjny",
     "licenseplate": "Tablica Rejestracyjna",
     "locationend": "Koniec Lokalizacji",
     "locationstart": "Rozpocznij Lokalizację",
