changed the way invoices work

--- a/RekeningrijdersApplicatie/src/assets/i18n/en.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
     "address": "Address",
     "autobus": "Autobus",
     "cancel": "Cancel",
+    "cartracker": "Cartracker",
     "date": "Date",
     "dateend": "End Date",
     "datestart": "Start Date",
