--- a/RekeningrijdersApplicatie/src/assets/i18n/nl.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/nl.json
@@ -3,6 +3,7 @@
     "address": "Adres",
     "autobus": "Autobus",
     "cancel": "Annuleren",
+    "cartracker": "Autotracker",
     "date": "Datum",
     "dateend": "Eind Datum",
     "datestart": "Start Datum",
