--- a/RekeningrijdersApplicatie/src/assets/i18n/pl.json
+++ b/RekeningrijdersApplicatie/src/assets/i18n/pl.json
@@ -3,6 +3,7 @@
     "address": "Adres",
     "autobus": "Omnibus",
     "cancel": "Anuluj",
+    "cartracker": "Autotracker",
     "date": "Data",
     "dateend": "Data Końcowa",
     "datestart": "Data Rozpoczęcia",
